# university-knowledge-search

./: .dockerignore  .env.example  .gitignore  README.md  conftest.py  coverage.xml  docker-compose.yml  init.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  README.md
backend/app/: main.py  metrics.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  document.py  search_history.py
backend/app/schemas/: document.py  search.py
backend/app/services/: document_parser.py  document_processing.py  document_upload.py  search_index.py  text_chunker.py
frontend/: .dockerignore  Dockerfile  README.md  bunfig.toml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/.vercel/: project.json
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorDisplay.tsx  FileUpload.tsx  Layout.tsx  SearchResult.tsx
frontend/src/pages/: HomePage.tsx  SearchPage.tsx
frontend/src/styles/: _variables.scss  global.scss
frontend/src/utils/: highlight.test.ts  (+1 more)
migrations/: env.py
migrations/versions/: 20260625_01_create_documents.py  20260705_01_add_document_status.py  20260705_02_create_search_history.py
monitoring/prometheus/: prometheus.yml
tests/: test_document_upload.py  test_health.py  test_metrics.py  test_search.py  test_search_index.py
tests/e2e/: test_document_flow.py
tests/fixtures/: corrupted.docx
tests/locust_test/: locustfile.py
(+9 files in other folders)
