[project]
name = "university-knowledge-search-backend"
version = "0.1.0"
description = "Backend for a university knowledge-base document search service."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
